--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <!-- <div class="page" id="project-details" style="display: flex;"> -->
             <header>
                 <div>
-                    <h2>Hospital Center</h2>
-                    <p style="color: #969696;">Community hospital located at downtown</p>
+                    <h2 data-project-info="name">Hospital Center</h2>
+                    <p data-project-info="description" style="color: #969696;">Community hospital located at downtown</p>
                 </div>
             </header>
             
@@ -133,29 +133,29 @@
                             <button class="btn-secondary"><p style="width: 100%;">Edit</p></button>
                         </div>
                         <div style="padding: 0 0px;">
-                            <h5>Hospital Center</h5>
-                            <p>Community hospital located at downtown</p>
+                            <h5 data-project-info="name_s">Hospital Center</h5>
+                            <p data-project-info="description_s">Community hospital located at downtown</p>
                         </div>
                         <div style="display: flex; column-gap: 30px; padding: 30px 0px; justify-content: space-between;">
                             <div >
                                 <p style="color: #969696;">Status</p>
-                                <p>Active</p>
+                                <p data-project-info="status">Active</p>
                             </div>
                             <div >
                                 <p style="color: #969696;">Role</p>
-                                <p>Engineer</p>
+                                <p data-project-info="userRole">Engineer</p>
                             </div>
                             <div >
                                 <p style="color: #969696;">Cost</p>
-                                <p>$2'000.000</p>
+                                <p data-project-info="cost">$2'000.000</p>
                             </div>
                             <div >
                                 <p style="color: #969696;">Finish Date</p>
-                                <p>2023-05-01</p>
+                                <p data-project-info="finishDate">2023-05-01</p>
                             </div>
                         </div>
                         <div style="background-color: #404040; border-radius: 9999px; overflow: auto; ">
-                            <div style="width: 80%; background-color: green; padding: 4px 0; text-align: center;">80%</div>
+                            <div data-project-info="progress" style="width: 80%; background-color: green; padding: 4px 0; text-align: center;">80%</div>
                         </div>
                     </div>
                     
