--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Master Class Dev Project</title>
     <!--link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /!-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" />
     <link rel="stylesheet" href="style.css">
@@ -187,7 +187,7 @@
                 <div id="viewer-container" class="dashboard-card"></div>
             </div>
         </div>
-
+ 
         <!-- <div class="page" id="users-page" > -->
         <div class="page" id="users-page" style="display: none;">
             <dialog id="new-user-modal">
