Added edit project dialog form default value update

--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
                     </div>
                 </form>
             </dialog>
-            <dialog id="error-message-modal">
+            <dialog id="edit-error-message-modal">
                 <h2>Error Occured</h2>
                 <div class="form-error-message">
                     <label>
                         <span class="material-icons-round">error </span>
-                        <span id="error-message">Error Message here!</span>
+                        <span id="edit-error-message">Error Message here!</span>
                     </label>
                 </div>
                 <div style="display: flex; justify-content: flex-end;">
-                    <button id="error-message-check-button">Check</button>
+                    <button id="edit-error-message-check-button">Check</button>
                 </div>
             </dialog>
             <header>
