edit project module update

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div style="display: flex; justify-content: flex-end; margin: 10px 0px 10px auto; column-gap: 10px;">
-                        <button id="project-input-canel" type="button" style="background-color: transparent;">Cancel</button>
+                        <button id="edit-project-input-canel" type="button" style="background-color: transparent;">Cancel</button>
                         <button type="submit" style="background-color: rgb(18, 145, 18);">Accept</button>
                     </div>
                 </form>
