--- a/index.html
+++ b/index.html
@@ -182,7 +182,11 @@
                 <div style="display: flex; flex-direction: column; row-gap: 30px;">
                     <div class="dashboard-card" style="padding: 30px 30px;">
                         <div style="display: flex; justify-content: space-between; align-items: center; padding: 0px 3px; margin-bottom: 30px;">
-                            <p style="font-size: 20px; background-color: #ca8134; padding: 12px; border-radius: 100%; aspect-ratio: 1;">HC</p>
+                            <p data-project-info="icon_char" 
+                                    style="font-size: 20px; color:black; background-color: #ca8134; padding: 12px; 
+                                     border-radius: 100%; aspect-ratio: 1; text-transform: uppercase;
+                                     display: flex; flex-direction: column; justify-content: center;">
+                                HC</p>
                             <button id="edit-project-btn" class="btn-secondary"><p style="width: 100%;">Edit</p></button>
                         </div>
                         <div style="padding: 0 0px;">
