project icon background color randomly

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="dashboard-card" style="padding: 30px 30px;">
                         <div style="display: flex; justify-content: space-between; align-items: center; padding: 0px 3px; margin-bottom: 30px;">
                             <p data-project-info="icon_char" 
-                                    style="font-size: 20px; color:black; background-color: #ca8134; padding: 12px; 
+                                    style="font-size: 20px; background-color: #ca8134; padding: 12px; 
                                      border-radius: 100%; aspect-ratio: 1; text-transform: uppercase;
                                      display: flex; flex-direction: column; justify-content: center;">
                                 HC</p>
