create new todo OK!

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </dialog>
             <dialog id="new-todo-modal">
-                <form id="new-todo-form" >                    
+                <form id="new-todo-form" method="dialog">                    
                     <h2>New To-Do</h2>
                     <div class="input-list">
                         <div class="form-field-container">
@@ -242,7 +242,7 @@
                                 <button id="new-todo-btn"> <span class="material-icons-round">add</span></button>
                             </div>
                         </div>
-                        <div id="todo-list" style="display: flex; flex-direction: column; padding: 10px 30px; row-gap: 20px;">
+                        <div id="todo-list" style="display: flex; flex-direction: column-reverse; padding: 10px 30px; row-gap: 20px;">
                             <!-- <div class="todo-item" >
                                 <div style="display: flex; justify-content: space-between; align-items: center;">
                                     <div style="display: flex; column-gap: 15px; align-items: center;">
