--- a/index.html
+++ b/index.html
@@ -177,7 +177,15 @@
                     <div class="input-list">
                         <div class="form-field-container">
                             <label><span class="material-icons-round">construction </span>To-Do Message</label>
-                            <textarea name="todo-message" cols="30" rows="5" placeholder="Make anything here as you want, even something longer."></textarea>
+                            <textarea name="todo-message" cols="30" rows="5" 
+                                placeholder="Make anything here as you want, even something longer."></textarea>
+                        </div>
+                        <div class="form-field-container">
+                            <label><span class="material-icons-round">done_outline</span>To-Do Status</label>
+                            <div style="display: flex; flex-direction:row; column-gap: 1em; align-items: start; justify-content: center;">
+                                <input type="checkbox" id="todo-status" name="todo-status" style="transform: scale(2);">
+                                <label for="todo-status">Done?</label>
+                            </div>
                         </div>
                         <div style="display: flex; justify-content: flex-end; margin: 10px 0px 10px auto; column-gap: 10px;">
                             <!-- <button id="new-todo-input-canel" type="button" style="background-color: transparent;">Cancel</button> -->
