wow lesson2 clear?

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                             <div style="display: flex; align-items: center; justify-content: end; column-gap: 20px;">
                                 <div style="display: flex; align-items: center; column-gap: 10px;">
                                     <span class="material-icons-round">search</span>
-                                    <input type="text" placeholder="Search To-Do's by name" style="width: 100%;">
+                                    <input id="todo-search" type="text" placeholder="Search To-Do's by name" style="width: 100%;">
                                 </div>
                                 <button id="new-todo-btn"> <span class="material-icons-round">add</span></button>
                             </div>
