--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Class Dev Project</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!--link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" /!-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" />
     <link rel="stylesheet" href="style.css">
@@ -275,15 +276,6 @@
                         </div>
                         <div id="todo-list" style="display: flex; flex-direction: column-reverse; padding: 10px 30px; row-gap: 20px;">
                             <!-- <div class="todo-item" >
-                                <div style="display: flex; justify-content: space-between; align-items: center;">
-                                    <div style="display: flex; column-gap: 15px; align-items: center;">
-                                        <span class="material-icons-round" style="padding: 10px; background-color: #686868; border-radius: 10px;">construction</span>
-                                        <p>Make anything here as you want, even something longer.</p>
-                                    </div>
-                                    <p style="text-wrap: nowrap; margin-left: 10px;">Fri, 20 sep</p>
-                                </div>
-                            </div>
-                            <div class="todo-item" >
                                 <div style="display: flex; justify-content: space-between; align-items: center;">
                                     <div style="display: flex; column-gap: 15px; align-items: center;">
                                         <span class="material-icons-round" style="padding: 10px; background-color: #686868; border-radius: 10px;">construction</span>
