--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     </div>
                 </div>
                 
-                <div id="viewer-container" class="dashboard-card"></div>
+                <div id="viewer-container" class="dashboard-card" style="min-width: 0;"></div>
             </div>
         </div>
  
