m3c3l2 react vite typescript , create Sidebar component

--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <aside id="sidebar">
-        <img id="company-logo" src="./assets/company-logo.svg" alt="Construction Company">
-        <ul id="nav-buttons">
-            <li id="projects-list-page-button"><span class="material-icons-round">apartment </span>  Projects</li>
-            <li id="users-list-page-button"><span class="material-icons-round">people </span>  Users</li>
-            <li><span class="material-icons-round">house </span>  Projects2</li>
-            <li><span class="material-icons-round">real_estate_agent </span>  Projects</li>
-            <li><span class="material-icons-round">holiday_village </span>  Projects</li>
-        </ul>
-    </aside>
+    <div id="app"></div>
     <main id="content">
         <!-- <div class="page" id="projects-page" style="display: none;"> -->
 
@@ -411,6 +402,6 @@
         </div>
 
     </main>
-    <script type="module" src="./src/index.ts"></script>
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
